at last we converts from using XML to using using fetch

--- a/Amazon Project/.vscode/settings.json
+++ b/Amazon Project/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "livePreview.defaultPreviewPath": "/amazon.html"
+    "livePreview.defaultPreviewPath": "/amazon.html",
+    "liveServer.settings.port": 5501
 }
